Can now create Messages from dictionaries!
Large refactoring, some unit tests added.

--- a/SwiftMavlink.xcodeproj/xcshareddata/xcschemes/SwiftMavlink.xcscheme
+++ b/SwiftMavlink.xcodeproj/xcshareddata/xcschemes/SwiftMavlink.xcscheme
@@ -26,9 +26,29 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "45EF8F5B1BAE37A700A6F764"
+               BuildableName = "SwiftMavlinkTests.xctest"
+               BlueprintName = "SwiftMavlinkTests"
+               ReferencedContainer = "container:SwiftMavlink.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "45761EFF1B4CBD4D00506E83"
+            BuildableName = "SwiftMavlink.framework"
+            BlueprintName = "SwiftMavlink"
+            ReferencedContainer = "container:SwiftMavlink.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
